# puregl

./: .gitmodules  CMakeLists.txt  LICENSE.md  LICENSE_ThirdParty.md  README.md
src/: camera.h  gl-utils.h  imaging.h  math.h  puregl.c  renderer-rasterization.h  renderer-ray-tracing.h  renderer.h  scene.h
